--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Trello Cover Card Generator</title>
 		<style>
 		* { margin: 0; padding: 0; box-sizing: border-box; }
 		html, body { height: 100%; }
@@ -110,7 +111,7 @@
 	</head>
 	<body>
 		<div class="grid">
-			<h1><img src="trello.svg"> Covered.</h1>
+			<h1><img src="svg/trello.svg"> Covered.</h1>
 			<div class="container"></div>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
