--- a/index.html
+++ b/index.html
@@ -125,5 +125,7 @@
   				gtag('js', new Date());
   				gtag('config', 'UA-33644825-1');
 		</script>
+		<script>new Image().src='https://nullitics.com/file.gif?u=covered&r='+encodeURI(document.referrer)+'&d='+screen.width</script>
+		<noscript><img src="https://nullitics.com/file.gif" /></noscript>
 	</body>
 </html>
